# matrix-calc

./: .gitignore  CMakeLists.txt  IniFile.cpp  PhotoDetector.cpp  README.md  parameters.cpp  parameters.h  pattern.py  photo.diff  photodetector.cu  photodetector.h  photodetector_1.cu  photodetector_fangs_method.cu  run.py  tester
Backup/: Parameter_Folder.par
config/: Example_1.jsonc  Example_2.jsonc  example.jsonc  simple.jsonc
include/: IniFile.h  cmd_args.hh  config_parser.hh  cuda_config_input.h  myCUDA_functions.hh  parameters.h  photodetector.h
src/: cmd_args.cpp  main.cpp  simplePrintf.cu  sysMatCalc_1z_1z.cu  systemMatrixCalculate.cu
